force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/JBT_RET_ACAD_SUMMARY_VW__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1YqDP1PMW41pwA3FJc4rAL1Ukt6V_3Z85p4iHSuvMdmI/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>JBT_RET_ACAD_SUMMARY_VWs</externalName>
    <label>Academic Summary (external)</label>
    <pluralLabel>Academic Summary (external)</pluralLabel>
</CustomObject>