force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/AID_YEAR__c.field-meta.xml
<CustomField>
    <fullName>AID_YEAR__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.AID_YEAR</description>
    <externalDeveloperName>AID_YEAR</externalDeveloperName>
    <label>Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>