force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/COLLEGE__c.field-meta.xml
<CustomField>
    <fullName>COLLEGE__c</fullName>
    <description>Data sourced from PS_ASU_SPRF_CURR.DERIVED (COLLEGE)</description>
    <externalDeveloperName>COLLEGE</externalDeveloperName>
    <label>College and Campus Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>