force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/CUM_GPA__c.field-meta.xml
<CustomField>
    <fullName>CUM_GPA__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.CUM_GPA</description>
    <externalDeveloperName>CUM_GPA</externalDeveloperName>
    <label>Cumulative GPA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>