force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/FND_TERM_REMAINA__c.field-meta.xml
<CustomField>
    <fullName>FND_TERM_REMAINA__c</fullName>
    <description>Data sourced from ASU_STDNT_RETENTION.FND_TERM_REMAIN</description>
    <externalDeveloperName>FND_TERM_REMAINA</externalDeveloperName>
    <label>Funding Remaining - Term</label>
    <length>3</length>
    <type>Text</type>
</CustomField>