force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/MAJOR__c.field-meta.xml
<CustomField>
    <fullName>MAJOR__c</fullName>
    <description>Data sourced from PS_ASU_SPRF_CURR.DERIVED (MAJOR)</description>
    <externalDeveloperName>MAJOR</externalDeveloperName>
    <label>Academic Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>