force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/SCHOLARSHIP_NAME__c.field-meta.xml
<CustomField>
    <fullName>SCHOLARSHIP_NAME__c</fullName>
    <description>Data sourced from PS_ASU_FA_P_AWD_P.SCHOLARSHIP_NAME</description>
    <externalDeveloperName>SCHOLARSHIP_NAME</externalDeveloperName>
    <label>Awarded Scholarships</label>
    <type>TextArea</type>
</CustomField>