force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.DERIVED (STATUS)</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>Academic Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>