force-app/main/default/objects/JBT_RET_ACAD_SUMMARY_VW__x/fields/TOT_CUMULATIVE__c.field-meta.xml
<CustomField>
    <fullName>TOT_CUMULATIVE__c</fullName>
    <description>Data sourced from ASU_STDNT_PROFILE_MAJ_TERM.TOT_CUMULATIVE</description>
    <externalDeveloperName>TOT_CUMULATIVE</externalDeveloperName>
    <label>Total Cumulative Points</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>